--- a/index.html
+++ b/index.html
@@ -40,46 +40,46 @@
 <br>
 <p>Young Tom just wanted out of his home town. The music scene sucked here and no bands would go on tour and there was nothing to do.  He didn’t know what he wanted in life but he knew it was more than this little island had to offer. </p>
 
-<div class="bg1" src="scene1/scene1.png" width="100%" height="100%"> </div>
+<div class="bg1" src="scenes/scene1.png" width="100%" height="100%"> </div>
 
 <p>He was tired of waiting for something to happen so he went on Craigslist to find a new place to stay. Luckily a dude named Redd had just what he was looking for. </p>
 
-<div class="bg2" src="scene2/scene2.png"> </div>
+<div class="bg2" src="scenes/scene2.png"> </div>
 
 <p>Tired from turbulence, Tom was ready to unpack and start his new life. He had never had his own place before and was super excited to have his own space.But poor Tom got scammed by Redd and quickly learned he wasn’t the only one renting this place. And it was NOT up to covid cleaning guidelines. A desperate but motivated Tom decided to stay till he could find somewhere better.</p>
 
-<div class="bg3" src="scene3/scene3.png"> </div>
+<div class="bg3" src="scenes/scene3.png"> </div>
 
 <p>Before moving, Tom was able to set up a job at a Starbucks. Although he hates working and having to take out his piercings, he enjoyed his coworkers. Especially Brewster, who had big dreams of opening up his own coffee shop and sticking it to the big coffee man. Unfortunately, there were talks of the employees starting a union so Tom's hours got decreased. 
 </p>
 
-<div class="bg4" src="scene4/scene4.png"> </div>
+<div class="bg4" src="scenes/scene4.png"> </div>
 
 <p>Since the city is expensive, Tom had to work two jobs to afford rent. A friend from back home had a sister who was a manager of GAP and got him a job. However,Label was nothing like her sister. She wants to be a fashion designer but is bitter about being stuck folding clothes so she constantly critiques Tom's hair. 
 </p>
 
-<div class="bg5" src="scene5/scene5.png"> </div>
+<div class="bg5" src="scenes/scene5.png"> </div>
 
 <p>Tom’s starting to realize the city isn’t all it's cracked up to be. He starts to miss the boringness of his old home. He works so much he hasn’t made any friends outside of work. And even if he did, he wouldn’t have the energy. Plus he’s had no matches on tinder, grindr, or bumble. The loneliness was creeping in.</p>
 
-<div class="bg6" src="scene6/scene6.png"> </div>
+<div class="bg6" src="scenes/scene6.png"> </div>
 
 <p>A fed up Tom walked back to his grimy apartment to find a note on the door. Redd wanted to raise the rent that Tom can already barely afford.</p>
 
-<div class="bg7" src="scene7/scene7.png"> </div>
+<div class="bg7" src="scenes/scene7.png"> </div>
 
 <p>A fed up Tom walked back to his grimy apartment to find a note on the door. Redd wanted to raise the rent that Tom can already barely afford.</p>
 
-<div class="bg8" src="scene8/scene8.png"> </div>
+<div class="bg8" src="scenes/scene8.png"> </div>
 
 <p>This was it! Tom was over the city life. Back at home, if you couldn’t afford things you could at least build items and sell them but not here! Tom knew it was time to go back home.</p>
 
-<div class="bg9" src="scene9/scene9.png"> </div>
+<div class="bg9" src="scenes/scene9.png"> </div>
 
 <p>So home he went. He ended up going to college for Business and was able to eventually start multiple businesses and become a greedy landlord like the ones he had to deal with. Consumed by capitalism, Tom was now happy and successful and never visited any cities ever again. 
 </p>
 
-<div class="bg10" src="scene10/scene10.jpg"> </div> 
+<div class="bg10" src="scenes/scene10.jpg"> </div> 
 
 </body>
 
