--- a/index.html
+++ b/index.html
@@ -68,15 +68,15 @@
 
 <div class="bg7" src="scenes/scene7.png"> </div>
 
-<p>A fed up Tom walked back to his grimy apartment to find a note on the door. Redd wanted to raise the rent that Tom can already barely afford.</p>
+<p>This was it! Tom was over the city life. Back at home, if you couldn’t afford things you could at least build items and sell them but not here! Tom knew it was time to go back home.</p>
 
 <div class="bg8" src="scenes/scene8.png"> </div>
 
-<p>This was it! Tom was over the city life. Back at home, if you couldn’t afford things you could at least build items and sell them but not here! Tom knew it was time to go back home.</p>
+<p>So home he went.</p>
 
 <div class="bg9" src="scenes/scene9.png"> </div>
 
-<p>So home he went. He ended up going to college for Business and was able to eventually start multiple businesses and become a greedy landlord like the ones he had to deal with. Consumed by capitalism, Tom was now happy and successful and never visited any cities ever again. 
+<p>He ended up going to college for Business and was able to eventually start multiple businesses and become a greedy landlord like the ones he had to deal with. Consumed by capitalism, Tom was now happy and successful and never visited any cities ever again.
 </p>
 
 <div class="bg10" src="scenes/scene10.jpg"> </div> 
