--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 <div class="bg9" src="scenes/scene9.png"> </div>
 
-<p>He ended up going to college for Business and was able to eventually start multiple businesses and become a greedy landlord like the ones he had to deal with. Consumed by capitalism, Tom was now happy and successful and never visited any cities ever again.
+<p>He ended up going to college for Business and was able to eventually start multiple businesses and become a greedy landlord like the ones he had to deal with. Consumed by capitalism, Tom was now happy and successful and never visited any cities ever again since he got musicians to come to him now. Like K.K. Slider. 
 </p>
 
 <div class="bg10" src="scenes/scene10.jpg"> </div> 
